2008-03-07  Stephen Gran  <sgran@debian.org>
        * rails/app/views/pentabarf/_search_person.rxml:
	s/:first_name, :last_name, :nickname, /:email, / at Marga's request

2008-02-27  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/pentabarf/_search_person.rxml: Add country code
	to table

2008-02-26  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/pentabarf/_search_person.rxml: Add a few fields
	into the table

	* rails/app/views/pentabarf/find_person.rxml: Add lots of search options

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::search_person_simple): Use the debconf
	find_person view
	(PentabarfController::search_person_advanced): dito

2008-02-06  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/submission/all_events.rxml: Add Disclaimer

2008-02-05  Joerg Jaspert  <joerg@debian.org>

	* rails/app/views/layouts/submission.rxml: Use conference.title

	* rails/app/helpers/submission_helper.rb
	(SubmissionHelper::sanitize_track): copied from schedule
	(SubmissionHelper::event_image): dito

	* rails/app/views/submission/_sidebar.rxml: s/Events/Own Events/
	Add All Events link

	* rails/app/views/submission/all_events.rxml: Added, showing all events

	* rails/app/views/submission/_event_general.rxml: Use the correct
	state descriptions

2008-02-02  Joerg Jaspert  <joerg@debian.org>

	* rails/app/controllers/pentabarf_controller.rb
	(PentabarfController::event): Fix "nothing found in dc_events"

	* rails/app/views/meditation.rhtml: Add pentabarf contact address

	* rails/app/models/event.rb: drop f_ from two flags, so they can
	be saved.

	* rails/app/views/pentabarf/find_conference.rxml: Fix syntax for
	Ajax thingie

	* rails/app/views/submission/_person_general.rxml: add participant
	mapping thingie to select a participant category

	* rails/app/views/submission/_person_travel.rxml: add some
	explanation for travel_[to|from]_venue
	hide departure_from, not _to

	* rails/config/routes.rb: Place it all below /penta/
