@@ -1,0 +1,4 @@
+xml.div( :id => 'buttons', :style => 'display: none;' ) do
+  xml.button( local('form::cancel'), {:type=>'button',:id=>'cancel-button',:acesskey=>'c',:onclick=>'clear_tainting();window.location.reload( true );'} )
+  xml.button( local('form::save'), {:type=>'submit',:id=>'submit-button',:acesskey=>'s',:onclick=>'if(validate_form()) { clear_tainting();send_content(); } else { return false; }'} )
+end
