@@ -1,0 +1,51 @@
+xml.div do
+  xml.h2 "Enter your data"
+
+  if not @conference
+    xml.div do
+      xml.p "Please select a conference:"
+      xml.ul do
+        @conferences.each do | conf |
+          xml.li do
+            xml.a(conf.title, {:style=>"text-decoration: underline;color: blue;",:href=>url_for(:conference=>conf.acronym)})
+          end
+        end
+      end
+    end
+  end
+  xml.p "Please note that this system has only been tested with recent versions of Gecko-based browsers like Mozilla Firefox, Seamonkey or Camino. Other browsers might not work."
+
+  if @conference
+    xml.div( :id => 'object-image' ) do
+      xml.img( :src => image_path( 'icon-person-64x64.png' ), :class => 'object-image' )
+    end
+
+    xml.div( :id => 'data' ) do
+      xml.form(:action=>url_for(:action=>:save_data),:id=>'content_form',:method=>'post',:enctype=>'multipart/form-data') do
+        xml << render( :partial => 'modification_buttons' )
+        xml.fieldset do
+          xml.legend local('Press')
+          xml << text_field_row( @dc_press, :association )
+          xml << text_field_row( @dc_press, :name )
+          xml << text_field_row( @dc_press, :email )
+          xml << text_field_row( @dc_press, :phone )
+          xml << text_field_row( @dc_press, :street )
+          xml << text_field_row( @dc_press, :zip )
+          xml << text_field_row( @dc_press, :city )
+          xml << text_field_row( @dc_press, :country )
+          xml << text_field_row( @dc_press, :fax )
+          xml << text_field_row( @dc_press, :url )
+          xml.tr do
+            xml.td do xml.b do xml << 'Description' end end
+            xml.td do
+              xml.textarea( @dc_press.description, {:name=>'dc_press[description]',:rows=>5,:id=>'dc_press[description]'} )
+            end
+          end
+        end
+      end
+
+      xml.script( "function send_content(){ $('content_form').submit();  }", { :type => 'text/javascript' } )
+      xml.script( "new Form.EventObserver('content_form', function(element, value ) { enable_save_button() } );", { :type => 'text/javascript' } )
+    end
+  end # if @conference
+end
