@@ -1,0 +1,7 @@
+xml.div do
+  xml.h2 "Thank you"
+
+  xml.div do
+    xml.p "Thank you for entering your data #{@dc_press.name}"
+  end
+end
