@@ -1,3 +1,9 @@
+2008-06-24  Joerg Jaspert  <joerg@debian.org>
+
+	* rails/app/controllers/submission_controller.rb (SubmissionController::attendee_dep): Added
+	(SubmissionController::attendee_time): Added
+	(SubmissionController::attendee): Added
+
 2008-03-07  Stephen Gran  <sgran@debian.org>
         * rails/app/views/pentabarf/_search_person.rxml:
 	s/:first_name, :last_name, :nickname, /:email, / at Marga's request
